--- a/estilo/style.css
+++ b/estilo/style.css
@@ -59,7 +59,7 @@ header > p {
     padding-left: 10px;
     max-width: 600px;
     margin: auto;
-    margin-bottom: 20px;
+    padding: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.377)
 }
 
